# bazel-go-issue

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  greeter.proto  main.go  repositories.bzl
